[test] Add scripts to automate ycsb execution

--- a/cmake_utils/ycsb.cmake.in
+++ b/cmake_utils/ycsb.cmake.in
@@ -1,3 +1,15 @@
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/YCSB-CXX/execution_plan_a2d.txt
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/YCSB-CXX/)
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/YCSB-CXX/execution_plan_e.txt
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/YCSB-CXX/)
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/YCSB-CXX/run-ycsb.sh
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/YCSB-CXX/)
+
+file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/YCSB-CXX/generate_workloads.py
+     DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/YCSB-CXX/)
+
 file(COPY ${CMAKE_SOURCE_DIR}/YCSB-CXX/workloads
      DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/YCSB-CXX/)
 
