--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -19,6 +19,7 @@ set(LIB_C_SOURCE_FILES
 
 list(APPEND LIB_C_SOURCE_FILES "${CMAKE_SOURCE_DIR}/utilities/spin_loop.c")
 list(APPEND LIB_C_SOURCE_FILES "${CMAKE_SOURCE_DIR}/utilities/list.c")
+list(APPEND LIB_C_SOURCE_FILES "${CMAKE_SOURCE_DIR}/utilities/dups_list.c")
 
 if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
   set_source_files_properties(LIB_C_SOURCE_FILES PROPERTIES COMPILE_FLAGS
