[fix] Multiple changes described in body
* Add "-gz" in compiler debug flags to reduce executable size.
* Changes multiple calls from malloc to calloc to avoid initialization
problems.
* Disables building parallax's API with some tests until open is
supported. Also disables test_scans and test_spills.
* Changes COMPACTION_UNIT_OF_WORK from 131K to 1.
* Register presence of scan operations in the system.
* Delete close_dirty_scanner.
* Fixes a bug with spill scanners where keys were not serialized
properly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,10 +129,11 @@ if(CHECK_COMPILER_FLAGS)
   string(APPEND CMAKE_C_FLAGS " -Wnull-dereference")
 endif()
 
-set(CMAKE_C_FLAGS_DEBUG "-ggdb3 -Og ${CMAKE_C_FLAGS_DEBUG}")
+set(CMAKE_C_FLAGS_DEBUG "-ggdb3 -Og -gz ${CMAKE_C_FLAGS_DEBUG}")
 set(CMAKE_C_FLAGS_RELEASE
     "${CMAKE_C_FLAGS_RELEASE} -flto -funit-at-a-time -fprefetch-loop-arrays -fpeel-loops -O2 -finline-functions -DNDEBUG"
 )
+
 set(CMAKE_CXX_FLAGS_RELEASE
     "${CMAKE_CXX_FLAGS_RELEASE} -std=gnu++11 -Wall -Werror")
 
