--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,26 +6,26 @@ variables:
     GIT_DEPTH: 0
 
 stages:
-    - build
-    - test
+    - debug_build
+    - debug_test
     - deploy
 
 build_gcc:
-    stage: build
+    stage: debug_build
     script:
         - mkdir -p build;cd build
         - cmake .. -DCMAKE_BUILD_TYPE=Debug
         - make all
 
 build_clang:
-    stage: build
+    stage: debug_build
     script:
         - mkdir -p build;cd build
         - cmake .. -DCMAKE_BUILD_TYPE=Debug -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
         - make all
 
 build_clang-tidy:
-    stage: build
+    stage: debug_build
     script:
         - mkdir -p build;cd build
         - cmake .. "-DCMAKE_C_CLANG_TIDY=/bin/clang-tidy;-checks=*,-clang-analyzer-*,-google-*,-hicpp-braces-around-statements,-bugprone-not-null-terminated-result,-readability-braces-around-statements,-readability-braces-around-statements*
@@ -33,14 +33,14 @@ build_clang-tidy:
         - make all
 
 build_cppcheck:
-    stage: build
+    stage: debug_build
     script:
         - cd lib
         - cppcheck --language=c . --enable=all --inconclusive --max-ctu-depth=64 -j 4
 
 build_centos:
     image: carvicsforth/centos_carv:latest
-    stage: build
+    stage: debug_build
     script:
         - source scl_source enable devtoolset-8 || echo ignoring exit code so CI does not bomb when it should not > /dev/null
         - mkdir -p build;cd build
@@ -49,7 +49,7 @@ build_centos:
 
 test_surrogates:
     image: carvicsforth/ubuntu_carv:latest
-    stage: test
+    stage: debug_test
     script:
         - mkdir -p build;cd build
         - cmake ..
@@ -59,7 +59,7 @@ test_surrogates:
 
 test_options:
     image: carvicsforth/ubuntu_carv:latest
-    stage: test
+    stage: debug_test
     script:
         - mkdir -p build;cd build
         - cmake ..
@@ -68,7 +68,7 @@ test_options:
 
 test_sanitizers:
     image: carvicsforth/ubuntu_carv:latest
-    stage: test
+    stage: debug_test
     script:
         - mkdir -p build;cd build
         - cmake .. -DUSE_SANITIZER=Address
@@ -77,7 +77,7 @@ test_sanitizers:
 
 test_ycsb_larged:
     image: carvicsforth/arch_carv:latest
-    stage: test
+    stage: debug_test
     tags:
         - kubernetes
     script:
@@ -92,7 +92,7 @@ test_ycsb_larged:
 
 test_ycsb_large:
     image: carvicsforth/arch_carv:latest
-    stage: test
+    stage: debug_test
     tags:
         - kubernetes
     script:
@@ -107,7 +107,7 @@ test_ycsb_large:
 
 test_ycsb_mediumd:
     image: carvicsforth/arch_carv:latest
-    stage: test
+    stage: debug_test
     tags:
         - kubernetes
     script:
@@ -122,7 +122,7 @@ test_ycsb_mediumd:
 
 test_ycsb_medium:
     image: carvicsforth/arch_carv:latest
-    stage: test
+    stage: debug_test
     tags:
         - kubernetes
     script:
@@ -137,7 +137,7 @@ test_ycsb_medium:
 
 test_ycsb_smalld:
     image: carvicsforth/arch_carv:latest
-    stage: test
+    stage: debug_test
     tags:
         - kubernetes
     script:
@@ -152,7 +152,7 @@ test_ycsb_smalld:
 
 test_ycsb_small:
     image: carvicsforth/arch_carv:latest
-    stage: test
+    stage: debug_test
     tags:
         - kubernetes
     script:
@@ -180,12 +180,12 @@ install_lib:
         - ./verify-installed-files.py $LIB_INSTALL_PATH
 
 pre-commit:
-    stage: build
+    stage: debug_build
     script:
         - ./scripts/pre-commit-CI.sh
 
 pre-merge:
-    stage: build
+    stage: debug_build
     script:
         - ./scripts/pre-merge-CI.sh
         - ./scripts/commit-msg-lint.py
