--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,14 +124,24 @@ set(CMAKE_C_FLAGS
     "-std=gnu11 -Wstrict-prototypes -Wall -Wextra -fPIC -fno-omit-frame-pointer -Wunused -Wuninitialized -Wimplicit-function-declaration -Wshadow  -Werror ${CMAKE_C_FLAGS}"
 )
 
-check_c_compiler_flag("-Wnull-dereference" CHECK_COMPILER_FLAGS)
-if(CHECK_COMPILER_FLAGS)
+check_c_compiler_flag("-Wnull-dereference" WNULL_DEREFERENCE)
+if(WNULL_DEREFERENCE)
   string(APPEND CMAKE_C_FLAGS " -Wnull-dereference")
+endif()
+
+check_c_compiler_flag("-fprefetch-loop-arrays" PREFETCH_LOOP_ARRAYS)
+if(PREFETCH_LOOP_ARRAYS)
+  string(APPEND CMAKE_C_FLAGS " -fprefetch-loop-arrays")
+endif()
+
+check_c_compiler_flag("-fpeel-loops" PEEL_LOOPS)
+if(PEEL_LOOPS)
+  string(APPEND CMAKE_C_FLAGS " -fpeel-loops")
 endif()
 
 set(CMAKE_C_FLAGS_DEBUG "-ggdb3 -Og -gz ${CMAKE_C_FLAGS_DEBUG}")
 set(CMAKE_C_FLAGS_RELEASE
-    "${CMAKE_C_FLAGS_RELEASE} -flto -funit-at-a-time -fprefetch-loop-arrays -fpeel-loops -O2 -finline-functions -DNDEBUG"
+    "${CMAKE_C_FLAGS_RELEASE} -flto -funit-at-a-time -O2 -finline-functions -DNDEBUG"
 )
 
 set(CMAKE_CXX_FLAGS_RELEASE
