[fix] Remove -Wnull-dereference from Release mode

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,9 +124,8 @@ set(CMAKE_C_FLAGS
     "-std=gnu11 -Wstrict-prototypes -Wall -Wextra -fPIC -fno-omit-frame-pointer -Wunused -Wuninitialized -Wimplicit-function-declaration -Wshadow  -Werror ${CMAKE_C_FLAGS}"
 )
 
-check_c_compiler_flag("-Wnull-dereference" WNULL_DEREFERENCE)
 if(WNULL_DEREFERENCE)
-  string(APPEND CMAKE_C_FLAGS " -Wnull-dereference")
+  string(APPEND CMAKE_C_FLAGS_DEBUG " -Wnull-dereference")
 endif()
 
 check_c_compiler_flag("-fprefetch-loop-arrays" PREFETCH_LOOP_ARRAYS)
