--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -91,7 +91,7 @@ test_sanitizers:
         - make test_sanitizers;cd tests;
         - ./test_sanitizers.sh
 
-test_ycsb_larged:
+debug_test_ycsb_larged:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
     tags:
@@ -106,7 +106,7 @@ test_ycsb_larged:
         - cd ..;cd ..
         - ./scripts/CI/destroy_mbbd.sh
 
-test_ycsb_large:
+debug_test_ycsb_large:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
     tags:
@@ -121,7 +121,7 @@ test_ycsb_large:
         - cd ..;cd ..
         - ./scripts/CI/destroy_mbbd.sh
 
-test_ycsb_mediumd:
+debug_test_ycsb_mediumd:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
     tags:
@@ -136,7 +136,7 @@ test_ycsb_mediumd:
         - cd ..;cd ..
         - ./scripts/CI/destroy_mbbd.sh
 
-test_ycsb_medium:
+debug_test_ycsb_medium:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
     tags:
@@ -151,7 +151,7 @@ test_ycsb_medium:
         - cd ..;cd ..
         - ./scripts/CI/destroy_mbbd.sh
 
-test_ycsb_smalld:
+debug_test_ycsb_smalld:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
     tags:
@@ -166,7 +166,7 @@ test_ycsb_smalld:
         - cd ..;cd ..
         - ./scripts/CI/destroy_mbbd.sh
 
-test_ycsb_small:
+debug_test_ycsb_small:
     image: carvicsforth/arch_carv:latest
     stage: debug_test
     tags:
