--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -109,8 +109,7 @@ debug_test_ycsb_larged:
         - mkdir -p build;cd build
         - cmake ..
         - make ycsb-edb;make mkfs.parallax;cd YCSB-CXX;
-        - ./mkfs.sh /tmp/kv_store.dat 1
-        - ./ycsb-edb -threads 1 -dbnum 1 -wl ld -p /tmp/kv_store.dat
+        - ctest -R ^test_larged$
         - cd ..;cd ..
         - ./scripts/CI/destroy_mbbd.sh
 
@@ -124,8 +123,7 @@ debug_test_ycsb_large:
         - mkdir -p build;cd build
         - cmake ..
         - make ycsb-edb;make mkfs.parallax;cd YCSB-CXX;
-        - ./mkfs.sh /tmp/kv_store.dat 1
-        - ./ycsb-edb -threads 1 -dbnum 1 -wl l -p /tmp/kv_store.dat
+        - ctest -R ^test_large$
         - cd ..;cd ..
         - ./scripts/CI/destroy_mbbd.sh
 
@@ -139,8 +137,7 @@ debug_test_ycsb_mediumd:
         - mkdir -p build;cd build
         - cmake ..
         - make ycsb-edb;make mkfs.parallax;cd YCSB-CXX;
-        - ./mkfs.sh /tmp/kv_store.dat 1
-        - ./ycsb-edb -threads 1 -dbnum 1 -wl md -p /tmp/kv_store.dat
+        - ctest -R ^test_mediumd$
         - cd ..;cd ..
         - ./scripts/CI/destroy_mbbd.sh
 
@@ -154,8 +151,7 @@ debug_test_ycsb_medium:
         - mkdir -p build;cd build
         - cmake ..
         - make ycsb-edb;make mkfs.parallax;cd YCSB-CXX;
-        - ./mkfs.sh /tmp/kv_store.dat 1
-        - ./ycsb-edb -threads 1 -dbnum 1 -wl m -p /tmp/kv_store.dat
+        - ctest -R ^test_medium$
         - cd ..;cd ..
         - ./scripts/CI/destroy_mbbd.sh
 
@@ -169,8 +165,7 @@ debug_test_ycsb_smalld:
         - mkdir -p build;cd build
         - cmake ..
         - make ycsb-edb;make mkfs.parallax;cd YCSB-CXX;
-        - ./mkfs.sh /tmp/kv_store.dat 1
-        - ./ycsb-edb -threads 1 -dbnum 1 -wl sd -p /tmp/kv_store.dat
+        - ctest -R ^test_smalld$
         - cd ..;cd ..
         - ./scripts/CI/destroy_mbbd.sh
 
@@ -184,8 +179,7 @@ debug_test_ycsb_small:
         - mkdir -p build;cd build
         - cmake ..
         - make ycsb-edb;make mkfs.parallax;cd YCSB-CXX;
-        - ./mkfs.sh /tmp/kv_store.dat 1
-        - ./ycsb-edb -threads 1 -dbnum 1 -wl s -p /tmp/kv_store.dat
+        - ctest -R ^test_small$
         - cd ..;cd ..
         - ./scripts/CI/destroy_mbbd.sh
 
@@ -199,8 +193,7 @@ release_test_ycsb_larged:
         - mkdir -p build;cd build
         - cmake .. -DCMAKE_BUILD_TYPE="Release"
         - make ycsb-edb;make mkfs.parallax;cd YCSB-CXX;
-        - ./mkfs.sh /tmp/kv_store.dat 1
-        - ./ycsb-edb -threads 1 -dbnum 1 -wl ld -p /tmp/kv_store.dat
+        - ctest -R ^test_larged$
         - cd ..;cd ..
         - ./scripts/CI/destroy_mbbd.sh
 
@@ -214,8 +207,7 @@ release_test_ycsb_large:
         - mkdir -p build;cd build
         - cmake .. -DCMAKE_BUILD_TYPE="Release"
         - make ycsb-edb;make mkfs.parallax;cd YCSB-CXX;
-        - ./mkfs.sh /tmp/kv_store.dat 1
-        - ./ycsb-edb -threads 1 -dbnum 1 -wl l -p /tmp/kv_store.dat
+        - ctest -R ^test_large$
         - cd ..;cd ..
         - ./scripts/CI/destroy_mbbd.sh
 
@@ -229,8 +221,7 @@ release_test_ycsb_mediumd:
         - mkdir -p build;cd build
         - cmake .. -DCMAKE_BUILD_TYPE="Release"
         - make ycsb-edb;make mkfs.parallax;cd YCSB-CXX;
-        - ./mkfs.sh /tmp/kv_store.dat 1
-        - ./ycsb-edb -threads 1 -dbnum 1 -wl md -p /tmp/kv_store.dat
+        - ctest -R ^test_mediumd$
         - cd ..;cd ..
         - ./scripts/CI/destroy_mbbd.sh
 
@@ -244,8 +235,7 @@ release_test_ycsb_medium:
         - mkdir -p build;cd build
         - cmake .. -DCMAKE_BUILD_TYPE="Release"
         - make ycsb-edb;make mkfs.parallax;cd YCSB-CXX;
-        - ./mkfs.sh /tmp/kv_store.dat 1
-        - ./ycsb-edb -threads 1 -dbnum 1 -wl m -p /tmp/kv_store.dat
+        - ctest -R ^test_medium$
         - cd ..;cd ..
         - ./scripts/CI/destroy_mbbd.sh
 
@@ -259,8 +249,7 @@ release_test_ycsb_smalld:
         - mkdir -p build;cd build
         - cmake .. -DCMAKE_BUILD_TYPE="Release"
         - make ycsb-edb;make mkfs.parallax;cd YCSB-CXX;
-        - ./mkfs.sh /tmp/kv_store.dat 1
-        - ./ycsb-edb -threads 1 -dbnum 1 -wl sd -p /tmp/kv_store.dat
+        - ctest -R ^test_smalld$
         - cd ..;cd ..
         - ./scripts/CI/destroy_mbbd.sh
 
@@ -274,8 +263,7 @@ release_test_ycsb_small:
         - mkdir -p build;cd build
         - cmake .. -DCMAKE_BUILD_TYPE="Release"
         - make ycsb-edb;make mkfs.parallax;cd YCSB-CXX;
-        - ./mkfs.sh /tmp/kv_store.dat 1
-        - ./ycsb-edb -threads 1 -dbnum 1 -wl s -p /tmp/kv_store.dat
+        - ctest -R ^test_small$
         - cd ..;cd ..
         - ./scripts/CI/destroy_mbbd.sh
 
