--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,7 @@ repos:
       rev: v3.4.0
       hooks:
           - id: trailing-whitespace
+            exclude: docs/
           - id: end-of-file-fixer
           - id: check-yaml
           - id: check-added-large-files
