--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,17 +5,16 @@ if(BUILD_TESTING)
   set(LIB_TEST_FILES
       test_deletes
       test_recovery.c
-      # test_scans.c
+      test_scans.c
       test_dirty_scans.c
       test_options.c
       test_sanitizers.c
-      test_gc.c
-      test_medium.c)
+      test_gc.c)
 
   set_source_files_properties(${LIB_TEST_FILES} COMPILE_FLAGS "-O3")
 
-  # add_executable(test_scans test_scans.c) target_link_libraries(test_scans
-  # "${PROJECT_NAME}" ${DEPENDENCIES})
+  add_executable(test_scans test_scans.c)
+  target_link_libraries(test_scans "${PROJECT_NAME}" ${DEPENDENCIES})
 
   add_executable(test_dirty_scans test_dirty_scans.c)
   target_link_libraries(test_dirty_scans "${PROJECT_NAME}" ${DEPENDENCIES})
@@ -44,7 +43,5 @@ if(BUILD_TESTING)
   target_link_libraries(test_gc "${PROJECT_NAME}" ${DEPENDENCIES})
   add_test(NAME test_gc COMMAND $<TARGET_FILE:test_gc>)
 
-  add_executable(test_medium test_medium.c arg_parser.c)
-  target_link_libraries(test_medium "${PROJECT_NAME}" ${DEPENDENCIES})
   add_subdirectory(Surrogates)
 endif()
