--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -293,3 +293,13 @@ pre-merge:
         - ./scripts/commit-msg-lint.py
     only:
         - merge_requests
+
+CPD:
+    stage: debug_build
+    script:
+        - echo -e "\e[0Ksection_start:`date +%s`:CPD_lib_section\r\e[0K CPD lib"
+        - python3 ./scripts/CI/cpd_output.py 100 ./lib c
+        - echo -e "\e[0Ksection_end:`date +%s`:CPD_lib_section\r\e[0K"
+        - echo -e "\e[0Ksection_start:`date +%s`:CPD_tests_section[collapsed=true]\r\e[0K CPD tests"
+        - python3 ./scripts/CI/cpd_output.py 100 ./tests c || exit 0
+        - echo -e "\e[0Ksection_end:`date +%s`:CPD_tests_section\r\e[0K"
