[test] Enable output in ctest jobs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,7 @@ variables:
     FF_GITLAB_REGISTRY_HELPER_IMAGE: 1
     GIT_STRATEGY: clone
     GIT_DEPTH: 0
+    CTEST_OUTPUT_ON_FAILURE: 1
 
 stages:
     - debug_build
