[refactor] Restructure CI configuration file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,329 +6,11 @@ variables:
     GIT_DEPTH: 0
     CTEST_OUTPUT_ON_FAILURE: 1
 
+include: scripts/CI/yml/*.yml
 stages:
     - debug_build
-    - debug_test
+    - lint
     - release_build
+    - debug_test
     - release_test
     - deploy
-
-debug_build_gcc:
-    stage: debug_build
-    script:
-        - mkdir -p build;cd build
-        - cmake .. -DCMAKE_BUILD_TYPE=Debug
-        - make all
-
-debug_build_clang:
-    stage: debug_build
-    script:
-        - mkdir -p build;cd build
-        - cmake .. -DCMAKE_BUILD_TYPE=Debug -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
-        - make all
-
-iwyu-report:
-    stage: debug_build
-    script:
-        - mkdir -p build;cd build
-        - cmake .. -DCMAKE_BUILD_TYPE=Debug -DRUN_IWYU=ON
-        - make parallax > make_output.txt 2&> iwyu_output.txt || echo ignoring exit code since if this job fails others will fail too > /dev/null
-        - ./check-iwyu-output.py
-
-release_build_gcc:
-    stage: release_build
-    script:
-        - mkdir -p build;cd build
-        - cmake .. -DCMAKE_BUILD_TYPE=Release
-        - make all
-
-release_build_clang:
-    stage: release_build
-    script:
-        - mkdir -p build;cd build
-        - cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
-        - make all
-
-build_clang-tidy:
-    stage: debug_build
-    script:
-        - mkdir -p build;cd build
-        - cmake .. "-DCMAKE_C_CLANG_TIDY=/bin/clang-tidy;-checks=*,-clang-analyzer-*,-google-*,-hicpp-braces-around-statements,-bugprone-not-null-terminated-result,-readability-braces-around-statements,-readability-braces-around-statements*
-          --format-style=../.clang-format -p ./compile_commands.json"
-        - make all
-
-build_cppcheck:
-    stage: debug_build
-    script:
-        - cd lib
-        - cppcheck --language=c . --enable=all --inconclusive --max-ctu-depth=64 -j 4
-
-build_centos:
-    image: carvicsforth/centos_carv:latest
-    stage: debug_build
-    script:
-        - source scl_source enable devtoolset-8 || echo ignoring exit code so CI does not bomb when it should not > /dev/null
-        - mkdir -p build;cd build
-        - cmake3 ..
-        - make all
-
-test_surrogates:
-    image: carvicsforth/ubuntu_carv:latest
-    stage: debug_test
-    script:
-        - mkdir -p build;cd build
-        - cmake ..
-        - make SurrogateTUsTest;cd tests/Surrogates;
-        - ./SurrogateTUsTest
-
-
-test_options:
-    image: carvicsforth/ubuntu_carv:latest
-    stage: debug_test
-    script:
-        - mkdir -p build;cd build
-        - cmake ..
-        - make test_options;cd tests;
-        - ./test_options
-
-test_sanitizers:
-    image: carvicsforth/ubuntu_carv:latest
-    stage: debug_test
-    script:
-        - mkdir -p build;cd build
-        - cmake .. -DUSE_SANITIZER=Address
-        - make test_sanitizers;cd tests;
-        - ./test_sanitizers.sh
-
-debug_test_ycsb_larged:
-    image: carvicsforth/arch_carv:latest
-    stage: debug_test
-    tags:
-        - kubernetes
-    script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake ..
-        - make ycsb-edb;make kv_format.parallax;cd YCSB-CXX;
-        - ctest -R ^test_larged$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
-
-debug_test_ycsb_large:
-    image: carvicsforth/arch_carv:latest
-    stage: debug_test
-    tags:
-        - kubernetes
-    script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake ..
-        - make ycsb-edb;make kv_format.parallax;cd YCSB-CXX;
-        - ctest -R ^test_large$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
-
-debug_test_ycsb_mediumd:
-    image: carvicsforth/arch_carv:latest
-    stage: debug_test
-    tags:
-        - kubernetes
-    script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake ..
-        - make ycsb-edb;make kv_format.parallax;cd YCSB-CXX;
-        - ctest -R ^test_mediumd$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
-
-debug_test_ycsb_medium:
-    image: carvicsforth/arch_carv:latest
-    stage: debug_test
-    tags:
-        - kubernetes
-    script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake ..
-        - make ycsb-edb;make kv_format.parallax;cd YCSB-CXX;
-        - ctest -R ^test_medium$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
-
-debug_test_ycsb_smalld:
-    image: carvicsforth/arch_carv:latest
-    stage: debug_test
-    tags:
-        - kubernetes
-    script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake ..
-        - make ycsb-edb;make kv_format.parallax;cd YCSB-CXX;
-        - ctest -R ^test_smalld$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
-
-debug_test_ycsb_small:
-    image: carvicsforth/arch_carv:latest
-    stage: debug_test
-    tags:
-        - kubernetes
-    script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake ..
-        - make ycsb-edb;make kv_format.parallax;cd YCSB-CXX;
-        - ctest -R ^test_small$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
-
-debug_test_gc:
-    image: carvicsforth/arch_carv:latest
-    stage: debug_test
-    tags:
-        - kubernetes
-    script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake ..
-        - make test_gc;make kv_format.parallax;cd tests;
-        - ctest -R ^test_gc$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
-
-release_test_ycsb_larged:
-    image: carvicsforth/arch_carv:latest
-    stage: release_test
-    tags:
-        - kubernetes
-    script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake .. -DCMAKE_BUILD_TYPE="Release"
-        - make ycsb-edb;make kv_format.parallax;cd YCSB-CXX;
-        - ctest -R ^test_larged$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
-
-release_test_ycsb_large:
-    image: carvicsforth/arch_carv:latest
-    stage: release_test
-    tags:
-        - kubernetes
-    script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake .. -DCMAKE_BUILD_TYPE="Release"
-        - make ycsb-edb;make kv_format.parallax;cd YCSB-CXX;
-        - ctest -R ^test_large$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
-
-release_test_ycsb_mediumd:
-    image: carvicsforth/arch_carv:latest
-    stage: release_test
-    tags:
-        - kubernetes
-    script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake .. -DCMAKE_BUILD_TYPE="Release"
-        - make ycsb-edb;make kv_format.parallax;cd YCSB-CXX;
-        - ctest -R ^test_mediumd$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
-
-release_test_ycsb_medium:
-    image: carvicsforth/arch_carv:latest
-    stage: release_test
-    tags:
-        - kubernetes
-    script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake .. -DCMAKE_BUILD_TYPE="Release"
-        - make ycsb-edb;make kv_format.parallax;cd YCSB-CXX;
-        - ctest -R ^test_medium$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
-
-release_test_ycsb_smalld:
-    image: carvicsforth/arch_carv:latest
-    stage: release_test
-    tags:
-        - kubernetes
-    script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake .. -DCMAKE_BUILD_TYPE="Release"
-        - make ycsb-edb;make kv_format.parallax;cd YCSB-CXX;
-        - ctest -R ^test_smalld$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
-
-release_test_ycsb_small:
-    image: carvicsforth/arch_carv:latest
-    stage: release_test
-    tags:
-        - kubernetes
-    script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake .. -DCMAKE_BUILD_TYPE="Release"
-        - make ycsb-edb;make kv_format.parallax;cd YCSB-CXX;
-        - ctest -R ^test_small$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
-
-release_test_gc:
-    image: carvicsforth/arch_carv:latest
-    stage: release_test
-    tags:
-        - kubernetes
-    script:
-        - ./scripts/CI/create_mbbd.sh
-        - mkdir -p build;cd build
-        - cmake .. -DCMAKE_BUILD_TYPE="Release"
-        - make test_gc;make kv_format.parallax;cd tests;
-        - ctest -R ^test_gc$
-        - cd ..;cd ..
-        - ./scripts/CI/destroy_mbbd.sh
-
-install_lib:
-    image: carvicsforth/ubuntu_carv:latest
-    stage: deploy
-    variables:
-        LIB_INSTALL_PATH: installtest
-    script:
-        - mkdir -p build;cd build
-        - cmake .. -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Debug -DCMAKE_C_COMPILER=gcc-10 -DCMAKE_CXX_COMPILER=g++-10
-        - make install DESTDIR=$LIB_INSTALL_PATH;
-        - cmake .. -DBUILD_SHARED_LIBS=OFF -DCMAKE_BUILD_TYPE=Debug -DCMAKE_C_COMPILER=gcc-10 -DCMAKE_CXX_COMPILER=g++-10
-        - make install DESTDIR=$LIB_INSTALL_PATH;
-        - mv $LIB_INSTALL_PATH ../scripts/;cd ../scripts
-        - ./verify-installed-files.py $LIB_INSTALL_PATH
-
-pre-commit:
-    stage: debug_build
-    script:
-        - ./scripts/pre-commit-CI.sh
-
-pre-merge:
-    stage: debug_build
-    script:
-        - ./scripts/pre-merge-CI.sh
-        - ./scripts/commit-msg-lint.py
-    only:
-        - merge_requests
-
-CPD:
-    stage: debug_build
-    script:
-        - echo -e "\e[0Ksection_start:`date +%s`:CPD_lib_section\r\e[0K CPD lib"
-        - python3 ./scripts/CI/cpd_output.py 100 ./lib c
-        - echo -e "\e[0Ksection_end:`date +%s`:CPD_lib_section\r\e[0K"
-        - echo -e "\e[0Ksection_start:`date +%s`:CPD_tests_section[collapsed=true]\r\e[0K CPD tests"
-        - python3 ./scripts/CI/cpd_output.py 100 ./tests c || exit 0
-        - echo -e "\e[0Ksection_end:`date +%s`:CPD_tests_section\r\e[0K"
