--- a/scripts/CI/yml/release-test.yml
+++ b/scripts/CI/yml/release-test.yml
@@ -92,6 +92,7 @@ release_test_gc:
         - ./scripts/CI/create_mbbd.sh
         - mkdir -p build;cd build
         - cmake .. -DCMAKE_BUILD_TYPE="Release"
+        - ./mkfs.sh /tmp/kv_store.dat 128
         - make test_gc;make kv_format.parallax;cd tests;
         - ctest -R ^test_gc$
         - cd ..;cd ..
